data/all_generated_tests/raw_wast_tests/unreachable_MismanagementofBlockNesting_1200.wast
;; 1. **Test Description:**    A function containing a deeply nested block structure with multiple `unreachable` instructions at different levels, followed by `br_table` that references varying depths.    - **Constraint Checked:** Ensures that the `unreachable` instruction within nested blocks correctly traps without allowing the `br_table` to manipulate the control flow improperly.    - **Relation to Mismanagement of Block Nesting:** Verifies if the depth of the nested blocks is correctly interpreted and handled during a trap caused by `unreachable`.

(assert_invalid
  (module (func $deeply_nested_unreachable
    (block 
      (block 
        (block 
          (block 
            (block 
              (unreachable)
            )
            (br_table 0 1 2 3)
          )
        )
      )
    )
  ))
  "type mismatch"
)